tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/LoyaltyAggrSubPointExprLedger__c.object-meta.xml
<CustomObject>
    <label>포인트(하위 유형) 만료 집계 원장</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LoyaltyAggrSubPointExprLedger이름</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>