tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/AccruedPoints__c.field-meta.xml
<CustomField>
    <fullName>AccruedPoints__c</fullName>
    <label>적립 포인트</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>