tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/AvailablePoints__c.field-meta.xml
<CustomField>
    <fullName>AvailablePoints__c</fullName>
    <formula>AccruedPoints__c - RedeemedPoints__c - ExpiredPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>잔여 포인트</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>