tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/CurrencySubTypeName__c.field-meta.xml
<CustomField>
    <fullName>CurrencySubTypeName__c</fullName>
    <label>포인트 정의 하위 유형 이름</label>
    <length>100</length>
    <type>Text</type>
</CustomField>