tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/ExpiredPoints__c.field-meta.xml
<CustomField>
    <fullName>ExpiredPoints__c</fullName>
    <label>만료된 포인트</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>