tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>만료 날짜</label>
    <type>Date</type>
</CustomField>