tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/isExpired__c.field-meta.xml
<CustomField>
    <fullName>isExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>만료 처리 여부</label>
    <type>Checkbox</type>
</CustomField>