tmp-prod-full/objects/LoyaltyAggrSubPointExprLedger__c/fields/LoyaltyProgramMemberId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyProgramMemberId__c</fullName>
    <label>회원 정보</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>포인트(하위 유형) 만료 집계 원장</relationshipLabel>
    <relationshipName>LoyaltyAggrSubPointExprLedger</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>